# revice

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
integration/vice/: README.md  apply-wiring.sh  smoke_test.py
integration/vice/patches/: 01-monitor-lexer-parser.patch  02-c64-hooks.patch  03-binmon-opcodes.patch  04-sound-asid-device.patch  05-silent-checkpoint.patch  06-binmon-route-through-revice-cores.patch  07-bustrace-vsidcpu-hook.patch  07-log-file-close-use-after-free.patch  08-bustrace-vsid-wiring.patch  09-log-stdout-nocolor-null-deref.patch
libs/asid/: CMakeLists.txt
libs/asid/include/: revice_asid.h
libs/asid/src/: asid_core.c
libs/asid/tests/: test_asid.c
libs/asid/vice/: soundasid.c
libs/bustrace/: CMakeLists.txt
libs/bustrace/include/: revice_bustrace.h
libs/bustrace/src/: bustrace_core.c
libs/bustrace/tests/: test_bustrace.c
libs/bustrace/vice/: soundbustrace.c  soundbustrace.h
libs/checkpoint/: CMakeLists.txt
libs/checkpoint/include/: revice_checkpoint.h
libs/checkpoint/src/: checkpoint_core.c
libs/checkpoint/tests/: test_checkpoint.c
libs/driveattach/: CMakeLists.txt
libs/driveattach/include/: revice_driveattach.h
libs/driveattach/src/: driveattach_core.c
libs/driveattach/tests/: test_driveattach.c
libs/keymatrix/: CMakeLists.txt
libs/keymatrix/include/: revice_keymatrix.h
libs/keymatrix/src/: keymatrix_core.c
libs/keymatrix/tests/: test_keymatrix.c
libs/keymatrix/vice/: mon_keymatrix.c  mon_keymatrix.h
libs/screen/: CMakeLists.txt
libs/screen/include/: revice_screen.h
libs/screen/src/: screen_core.c
libs/screen/tests/: test_screen.c
libs/screen/vice/: c64screen.c  mon_screen.c  mon_screen.h
libs/video/: CMakeLists.txt
libs/video/include/: revice_video.h
libs/video/src/: video_core.c
libs/video/tests/: test_video.c
libs/video/vice/: mon_video.c  mon_video.h
tests/: revice_test.h
